# sbgm

./: .gitignore  README.md  main.py  pyproject.toml  setup.py
.github/workflows/: joss.yml  publish.yml  tests.yml
configs/: __init__.py  cifar10.py  flowers.py  grfs.py  mnist.py  moons.py  quijote.py
data/: __init__.py  cifar10.py  flowers.py  grfs.py  mnist.py  moons.py  quijote.py  utils.py
examples/: moons.ipynb  run_from_config.py  sdes.ipynb
paper/: paper.bib  paper.md
sbgm/: __init__.py  _misc.py  _ode.py  _sample.py  _sde.py  _train.py
sbgm/models/: __init__.py  _mixer.py  _mlp.py  _unet.py
sbgm/sde/: __init__.py  _sde.py  _subvp.py  _ve.py  _vp.py
sgm/: _sample.py  _sde.py  main.py
sgm/configs/: dgdm.py  quijote.py
sgm/data/: grfs.py  mnist.py  utils.py
sgm/sgm/: _misc.py  _ode.py  _sde.py  _shard.py
sgm/sgm.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
sgm/sgm/models/: __init__.py  _mixer.py  _mlp.py  _unet_xy.py
src/: main.py
src/configs/: __init__.py  cifar10.py  flowers.py  grfs.py  mnist.py  moons.py
src/data/: __init__.py  _data.py  cifar10.py  mnist.py  moons.py  utils.py
src/sgm/: __init__.py  _fisher.py  _misc.py  _ode.py  _sample.py  _sde.py  _train.py
src/sgm/models/: _mixer.py  _mlp.py  _set_transformer.py  _unet.py  _unet_xy.py
tests/: test.py  test_likelihood.py  test_models.py  test_sampling.py  test_sdes.py
