[project]
name = "sbgm"
version = "0.0.17"
description = "Score-based Diffusion models in JAX."
readme = "README.md"
requires-python ="~=3.12"
license = {file = "LICENSE"}
authors = [
  {name = "Jed Homer", email = "jedhmr@gmail.com"},
]
keywords = [
    "jax", 
    "deep-learning", 
    "generative-models", 
    "diffusion-models",
    "score-based-diffusion"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
urls = {repository = "https://github.com/homerjed/sbgm"}

dependencies = [
    'jax>=0.4.33',
    'equinox>=0.11.7',
    'diffrax>=0.6.0',
    'optax>=0.2.3',
    'beartype',
    'ml_collections',
    'numpy',
    'matplotlib',
    'einops>=0.8.0',
    'torch>=2.0',
    'torchvision',
    'cloudpickle',
    'tqdm',
    'powerbox'
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["sbgm/*"]